--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -168,7 +168,7 @@ $button-color: #E71D36;
 
 $font-headline: 'Playfair Display', serif;
 $font-body: 'Montserrat Light', sans-serif;
-// $font-sans: 'Montserrat', sans-serif;
+$font-regular: 'Montserrat', sans-serif;
 $font-sans-hairline: 'Montserrat Hairline', sans-serif;
 
 @mixin font-header {
@@ -226,8 +226,12 @@ button{
   border: none;
   width: 100%;
   font-size: 1rem;
+  font-weight: 700;
   box-sizing: border-box;
   padding: 2.5%;
+  font-family: $font-regular;
+  font-weight: 700;
+
 }
 
 ul{
@@ -577,9 +581,13 @@ footer i:hover{
       margin-bottom: 1rem;
     }
     button{
+      background-color: $secondary-color;
       font-size: 1.25rem;
       padding: 2.5% 0;
       box-sizing: border-box;
+      a{
+        color: white;
+      }
     }
 }
 
@@ -589,17 +597,29 @@ footer i:hover{
   display: flex;
   display: -webkit-flex;
   justify-content: center;
-  align-items: center;
+  align-items: space-around;
   flex-flow: wrap row;
-  min-height: 280px;
+  min-height: 300px;
     .offerings-items-container{
         width: 80%;
         margin: 5% 0;
+        min-height: 260px;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: wrap row;
       h3{
         font-size: 1.5rem;
       }
       p{
+        
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        align-items: center;
         margin: 5% 0;
+        min-height: 150px;
       }
     }
     .offerings-item-wrapper{
