--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -428,7 +428,8 @@ footer {
   width: 100%;
   display: flex;
   display: -webkit-flex;
-  font-size: .9rem; }
+  font-size: .8rem;
+  padding: 2vh 0; }
 
 .footer-copy {
   display: flex;
@@ -436,7 +437,8 @@ footer {
   align-items: center;
   flex-flow: wrap row;
   width: 100%;
-  justify-content: space-around; }
+  justify-content: space-around;
+  text-transform: uppercase; }
 
 .footer-tag {
   display: flex;
@@ -450,7 +452,10 @@ footer {
   display: -webkit-flex;
   width: 75%;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: center; }
+
+footer li {
+  margin: 0 5%; }
 
 footer i {
   color: #011627; }
@@ -500,7 +505,7 @@ footer i:hover {
   justify-content: center;
   align-items: space-around;
   flex-flow: wrap row;
-  min-height: 300px; }
+  min-height: 350px; }
   .offerings-item .offerings-items-container {
     width: 80%;
     margin: 5% 0;
@@ -990,8 +995,13 @@ body {
     width: 40%;
     margin: 0 1.25%; }
 
-  .offerings-items-container p {
-    margin: 2.5% 0; }
+  .offerings-item {
+    min-height: 300px; }
+
+  .offerings-items-container {
+    width: 70%; }
+    .offerings-items-container p {
+      margin: 2.5% 0; }
 
   .about-copy-wrapper aside .about-aside-photo {
     margin-left: .5rem; }
@@ -1071,10 +1081,10 @@ body {
     justify-content: space-between; }
 
   .footer-tag {
-    width: 60%; }
+    width: 50%; }
 
   .social {
-    width: 40%; } }
+    width: 50%; } }
 @media only screen and (min-width: 1200px) {
   .welcome-left {
     width: 40%;
@@ -1095,7 +1105,14 @@ body {
     flex-wrap: nowrap; }
 
   .offerings-item {
-    width: 32%; }
+    width: 32%;
+    min-height: 350px; }
+
+  .offerings-items-container {
+    width: 80%; }
+
+  footer {
+    padding: 1vh 0; }
 
   .not-found-main {
     padding: 2vh 8vh; } }
