--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -152,14 +152,6 @@ $accent-grey: #EEEEEE;
 $button-color: #E71D36;
 
 // Fonts
-@font-face{
-    font-family: 'Montserrat Hairline';
-    src: url('../fonts/Montserrat-Hairline.otf');
-}
-@font-face{
-    font-family: 'Montserrat Light';
-    src: url('../fonts/Montserrat-Light.otf');
-}
 
 @mixin font-display{ 
   font-family: 'NarzissRegular-Drops';
@@ -767,11 +759,6 @@ footer i:hover{
   align-items: center;
   flex-flow: wrap column;
   margin: 2.5% 0 0 0;
-  p{
-    width: 50%;      
-    margin: 0 0 1rem 0;
-  }
-
 }
 
 /* ==========================================================================
@@ -1135,6 +1122,75 @@ footer i:hover{
 }
 
 /* ==========================================================================
+   Interest list
+   ========================================================================== */
+   .interest-list{
+    background-color: $main-color;
+    color: white;
+    min-height: 100vh;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: space-between;
+    .wrapper{
+      display: flex;
+      display: -webkit-flex;
+      flex-flow: row wrap;
+      header{
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        flex-flow: wrap row;
+        width: 100%;
+        padding: 5% 0;
+        .logo-il{
+          width: 50%;
+          margin: 0 0 .5rem 0;
+          max-width: 450px;
+          img{
+            width: 100%;
+          }
+        }
+        h2{
+          @include font-display;
+          font-size: 2.5rem;
+        }
+
+      }
+      .interest-list-description{
+        height: 300px;
+        background-color: violet;
+        width: 100%;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        .il-header-description{
+          background-color: lightsalmon;
+          width: 80%;
+        }
+      }
+      .convertkit{
+        background-color: #f9f9f9;
+        width: 100%;
+        .ck_form_container.ck_inline{
+          width: 100%;
+          display: flex;
+          display: -webkit-flex;
+          justify-content: center;
+          background-color: $accent-grey;
+        .ck_form.ck_minimal{
+          width: 80%;
+        }
+        }
+      }
+    }
+  }
+
+
+
+
+
+
+/* ==========================================================================
    Helper classes
    ========================================================================== */
 
@@ -1267,6 +1323,14 @@ footer i:hover{
   }
 }
 
+//WIDE COPY
+.about-after-aside-copy{
+  p{
+    width: 75%;      
+    margin: 0 0 1rem 0;
+    max-width: 675px;
+  }
+}
 //SALES
 
 .sales{
@@ -1418,6 +1482,15 @@ footer{
   }
 }
 }
+
+//WIDE COPY
+.about-after-aside-copy{
+  p{
+    // width: 50%;      
+    margin: 0 0 1rem 0;
+  }
+}
+
 //OFFERINGS
 .offerings-container-wrapper{
   display: -webkit-flex;
