--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -1168,7 +1168,10 @@ body {
     width: 50%; }
 
   .social {
-    width: 50%; } }
+    width: 50%; }
+
+  .interest-list .wrapper .interest-list-description .il-header-description {
+    margin: 5% 0; } }
 @media only screen and (min-width: 1200px) {
   .welcome-left {
     width: 40%;
@@ -1203,6 +1206,9 @@ body {
 
   footer {
     padding: 1vh 0; }
+
+  .interest-list .wrapper .interest-list-description .il-header-description {
+    width: 50%; }
 
   .not-found-main {
     padding: 2vh 8vh; } }
