--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -124,6 +124,12 @@ table {
 /* ==========================================================================
    Author's global styles
    ========================================================================== */
+@font-face {
+  font-family: 'Montserrat Hairline';
+  src: url("../fonts/Montserrat-Hairline.otf") format("opentype"); }
+@font-face {
+  font-family: 'Montserrat Light';
+  src: url("../fonts/Montserrat-Light.otf") format("opentype"); }
 .italic {
   font-style: italic; }
 
@@ -954,7 +960,7 @@ body {
         text-transform: uppercase;
         font-size: 2.5rem; }
     .interest-list .wrapper .interest-list-description {
-      background-color: #EEEEEE;
+      background-color: white;
       color: #011627;
       width: 100%;
       display: flex;
@@ -963,12 +969,23 @@ body {
       align-items: center; }
       .interest-list .wrapper .interest-list-description .il-header-description {
         width: 80%;
-        margin: 10% 0;
+        margin: 5% 0;
         text-align: left; }
+        .interest-list .wrapper .interest-list-description .il-header-description .familiar {
+          font-size: 1.25rem;
+          line-height: 1.4; }
+          .interest-list .wrapper .interest-list-description .il-header-description .familiar p {
+            margin-bottom: 0.9rem; }
+            .interest-list .wrapper .interest-list-description .il-header-description .familiar p span {
+              font-family: "Montserrat", sans-serif;
+              font-weight: 700;
+              text-transform: uppercase; }
         .interest-list .wrapper .interest-list-description .il-header-description h2 {
           font-weight: 700;
           margin: 5% 0 2.5% 0;
-          text-transform: uppercase; }
+          text-transform: uppercase;
+          color: #2EC4B6;
+          font-size: 2.5rem; }
         .interest-list .wrapper .interest-list-description .il-header-description ul {
           list-style-type: square;
           list-style-position: inside;
@@ -985,6 +1002,7 @@ body {
       align-items: flex-end; }
       .interest-list .wrapper .convertkit .ck_form_container.ck_inline {
         width: 100%;
+        padding: 5% 0;
         display: flex;
         display: -webkit-flex;
         justify-content: center;
@@ -993,6 +1011,102 @@ body {
         background-color: #2EC4B6; }
         .interest-list .wrapper .convertkit .ck_form_container.ck_inline .ck_form.ck_minimal {
           width: 80%; }
+
+.sales-img {
+  background: url("../img/freelance-plan-hero.jpeg");
+  -webkit-filter: saturate(0.5);
+  filter: saturate(0.5);
+  background-size: cover;
+  width: 100%;
+  height: 800px;
+  background-position: center top;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center; }
+  .sales-img p {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 3.25rem;
+    color: white;
+    -webkit-filter: saturate(1.5);
+    filter: saturate(1.5);
+    -webkit-filter: drop-shadow(2px 2px 15px #011627);
+    filter: drop-shadow(2px 2px 15px #011627);
+    width: 80%; }
+    .sales-img p span {
+      text-transform: uppercase;
+      color: #2EC4B6; }
+
+.fp-bio {
+  background-color: #2EC4B6;
+  color: white;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center; }
+  .fp-bio p {
+    font-family: "Montserrat Hairline", sans-serif;
+    font-size: 2.5rem;
+    margin: 5% 0;
+    width: 80%; }
+
+.fp-dark {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  flex-flow: wrap row;
+  text-align: left; }
+  .fp-dark div {
+    width: 80%;
+    font-size: 1.25rem;
+    line-height: 1.4;
+    margin: 5% 0; }
+    .fp-dark div h2 {
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #2EC4B6;
+      font-size: 2.5rem; }
+    .fp-dark div p {
+      margin-bottom: 0.9rem;
+      font-family: "Montserrat Light", sans-serif; }
+      .fp-dark div p span {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 700;
+        text-transform: uppercase; }
+
+.module {
+  margin: 2.5% 0; }
+  .module div {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: wrap row;
+    text-align: left;
+    margin: 1.25%  0;
+    text-transform: uppercase;
+    background-color: #EEEEEE; }
+    .module div .number {
+      color: #2EC4B6;
+      font-weight: 700;
+      font-size: 3rem;
+      height: 5rem;
+      width: 5rem;
+      display: flex;
+      display: -webkit-flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #011627;
+      border-radius: 100%;
+      margin: .5rem 0; }
+    .module div .module-description {
+      height: 100%;
+      max-width: 175px;
+      font-size: 1.5rem;
+      line-height: 1.3;
+      margin-left: 1.5rem;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 700; }
 
 /* ==========================================================================
    Helper classes
@@ -1171,7 +1285,16 @@ body {
     width: 50%; }
 
   .interest-list .wrapper .interest-list-description .il-header-description {
-    margin: 5% 0; } }
+    margin: 5% 0; }
+
+  .module {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: wrap column; }
+    .module div .module-description {
+      max-width: 300px; }
+    .module div:nth-child(even) {
+      justify-content: flex-end; } }
 @media only screen and (min-width: 1200px) {
   .welcome-left {
     width: 40%;
@@ -1206,9 +1329,6 @@ body {
 
   footer {
     padding: 1vh 0; }
-
-  .interest-list .wrapper .interest-list-description .il-header-description {
-    width: 50%; }
 
   .not-found-main {
     padding: 2vh 8vh; } }
