--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -143,6 +143,16 @@ table {
    Author's global styles
    ========================================================================== */
 
+@font-face {
+   font-family: 'Montserrat Hairline';
+   src:  url('../fonts/Montserrat-Hairline.otf') format('opentype');
+}
+
+@font-face {
+   font-family: 'Montserrat Light';
+   src:  url('../fonts/Montserrat-Light.otf') format('opentype');
+}
+
 // Colors
 $main-color: #011627;
 $secondary-color: #2EC4B6;
@@ -1157,7 +1167,7 @@ footer i:hover{
 
       }
       .interest-list-description{
-        background-color: $accent-grey;
+        background-color: white;
         color: $main-color;
         width: 100%;
         display: flex;
@@ -1166,12 +1176,26 @@ footer i:hover{
         align-items: center;
         .il-header-description{
           width: 80%;
-          margin: 10% 0; 
+          margin: 5% 0; 
           text-align: left;
+          .familiar{
+            font-size: 1.25rem;
+            line-height: 1.4;
+            p{
+                margin-bottom: 0.9rem;
+            span{
+              font-family: $font-regular;
+              font-weight: 700;
+              text-transform: uppercase;
+            }
+          }
+          }
           h2{
             font-weight: 700;
             margin: 5% 0 2.5% 0;
             text-transform: uppercase;
+            color: $secondary-color;
+            font-size: 2.5rem;
           }
           ul{
             list-style-type: square; 
@@ -1193,6 +1217,7 @@ footer i:hover{
           align-items: flex-end;
         .ck_form_container.ck_inline{
           width: 100%;
+          padding: 5% 0;
           display: flex;
           display: -webkit-flex;
           justify-content: center;
@@ -1207,9 +1232,114 @@ footer i:hover{
     }
   }
 
+.sales-img{
+  background: url('../img/freelance-plan-hero.jpeg');
+  -webkit-filter: saturate(.5);
+  filter: saturate(.5);
+  background-size: cover;
+  width: 100%;
+  height: 800px;
+  background-position: center top;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  p{
+    @include font-header;
+    font-size: 3.25rem;
+    color: white;
+    -webkit-filter: saturate(1.5);
+    filter: saturate(1.5);
+    -webkit-filter: drop-shadow(2px 2px 15px $main-color);
+    filter: drop-shadow(2px 2px 15px $main-color);
+    width: 80%;
+    span{
+      text-transform: uppercase;
+      color: $secondary-color;
+    }
+  }
+}
 
+.fp-bio{
+  background-color: $secondary-color;
+  color: white;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  p{
+    font-family: $font-sans-hairline;
+    font-size: 2.5rem;
+    margin: 5% 0;
+    width: 80%;
+  }
+}
 
+.fp-dark{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  flex-flow: wrap row;
+  text-align: left;
+  div{
+    width: 80%;
+    font-size: 1.25rem;
+    line-height: 1.4;
+    margin: 5% 0; 
+    h2{
+      font-weight: 700;
+      text-transform: uppercase;
+      color: $secondary-color;
+      font-size: 2.5rem;
+    }
+    p{
+      margin-bottom: 0.9rem;
+      font-family: $font-body;
+      span{
+        font-family: $font-regular;
+        font-weight: 700;
+        text-transform: uppercase;
+        }
+      }
+  }
+}
 
+.module{
+    margin: 2.5% 0;
+  div{
+    display: flex;
+    display: -webkit-flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: wrap row;
+    text-align: left;
+    margin: 1.25%  0;
+    text-transform: uppercase;
+    background-color: $accent-grey;
+    .number{
+        color: $secondary-color;
+        font-weight: 700;
+        font-size: 3rem;
+        height: 5rem;
+        width: 5rem;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $main-color;
+        border-radius: 100%;
+        margin: .5rem 0;
+      }
+      .module-description{
+        height: 100%;
+        max-width: 175px;
+        font-size: 1.5rem;
+        line-height: 1.3;
+        margin-left: 1.5rem;
+        font-family: $font-regular;
+        font-weight: 700;
+      }
+    }
+  }
 
 
 /* ==========================================================================
@@ -1485,6 +1615,20 @@ footer{
   }
 }
 
+.module{
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: wrap column;
+  div{
+    .module-description{
+        max-width: 300px;
+      }
+  }
+  div:nth-child(even){
+    justify-content: flex-end;
+  }
+}
+
 }
 @media only screen and (min-width: 1200px) {
 
@@ -1554,7 +1698,7 @@ footer{
   .wrapper{
     .interest-list-description{
     .il-header-description{
-      width: 50%;
+      // width: 50%;
       }
     }
   }
