--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -1238,8 +1238,7 @@ footer i:hover{
   filter: saturate(.5);
   background-size: cover;
   width: 100%;
-  height: 800px;
-  background-position: center top;
+  padding: 20% 0;
   display: flex;
   display: -webkit-flex;
   justify-content: center;
@@ -1280,6 +1279,7 @@ footer i:hover{
   justify-content: center;
   flex-flow: wrap row;
   text-align: left;
+  width: 100%;
   div{
     width: 80%;
     font-size: 1.25rem;
@@ -1609,7 +1609,10 @@ footer{
   .wrapper{
 .interest-list-description{
   .il-header-description{
-    margin: 5% 0; 
+    margin: 2.5% 0;
+    h2{
+      margin: 0 0 2.5% 0;
+    } 
       }
     }
   }
@@ -1691,17 +1694,6 @@ footer{
 
 footer{
     padding: 1vh 0;
-}
-
-// Interest Lists
-.interest-list{
-  .wrapper{
-    .interest-list-description{
-    .il-header-description{
-      // width: 50%;
-      }
-    }
-  }
 }
 
 //404
