--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -1340,7 +1340,29 @@ footer i:hover{
       }
     }
   }
+// .familar-left{
+//   width: 70%;
+// }
 
+// .familiar-photo{
+//   width: 10rem;
+//   height: 10rem;
+//   img{
+//     width: 100%;
+//   border-radius: 100%;
+//   }
+// }
+
+// Pinterest images hide
+
+.social-media-photos{
+  img{
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  }
+}
 
 /* ==========================================================================
    Helper classes
