--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -189,6 +189,9 @@ a {
   font-weight: 700;
   color: #2EC4B6; }
 
+img {
+  width: 100%; }
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -994,12 +997,14 @@ body {
             display: list-item;
             line-height: 1.4; }
     .interest-list .wrapper .convertkit {
-      background-color: red;
       width: 100%;
       display: flex;
       display: -webkit-flex;
       justify-content: center;
-      align-items: flex-end; }
+      align-items: flex-end;
+      flex-flow: wrap row; }
+      .interest-list .wrapper .convertkit div {
+        width: 100%; }
       .interest-list .wrapper .convertkit .ck_form_container.ck_inline {
         width: 100%;
         padding: 5% 0;
@@ -1011,6 +1016,15 @@ body {
         background-color: #2EC4B6; }
         .interest-list .wrapper .convertkit .ck_form_container.ck_inline .ck_form.ck_minimal {
           width: 80%; }
+      .interest-list .wrapper .convertkit aside {
+        padding: 2.5% 0;
+        font-size: 1.25rem; }
+        .interest-list .wrapper .convertkit aside i, .interest-list .wrapper .convertkit aside a {
+          text-transform: uppercase; }
+        .interest-list .wrapper .convertkit aside i {
+          color: #2EC4B6; }
+        .interest-list .wrapper .convertkit aside a:hover {
+          color: #E71D36; }
 
 .sales-img {
   background: url("../img/freelance-plan-hero.jpeg");
@@ -1076,37 +1090,53 @@ body {
 
 .module {
   margin: 2.5% 0; }
-  .module div {
+  .module .module-item {
     display: flex;
     display: -webkit-flex;
-    justify-content: flex-start;
-    align-items: center;
     flex-flow: wrap row;
+    justify-content: flex-start;
     text-align: left;
-    margin: 1.25%  0;
-    text-transform: uppercase;
+    margin: 5% 0;
     background-color: #EEEEEE; }
-    .module div .number {
+    .module .module-item .number {
       color: #2EC4B6;
       font-weight: 700;
       font-size: 3rem;
-      height: 5rem;
-      width: 5rem;
+      height: 80px;
+      width: 80px;
       display: flex;
       display: -webkit-flex;
       justify-content: center;
       align-items: center;
       background-color: #011627;
-      border-radius: 100%;
-      margin: .5rem 0; }
-    .module div .module-description {
-      height: 100%;
-      max-width: 175px;
+      border-radius: 50%;
+      margin: 5% 0 0 5%; }
+    .module .module-item .module-description {
       font-size: 1.5rem;
-      line-height: 1.3;
-      margin-left: 1.5rem;
+      width: 90%;
       font-family: "Montserrat", sans-serif;
-      font-weight: 700; }
+      font-weight: 700;
+      display: flex;
+      display: -webkit-flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-flow: wrap row;
+      margin: 5% 0 5% 5%; }
+      .module .module-item .module-description h3 {
+        text-transform: uppercase;
+        margin-bottom: 2.5%; }
+      .module .module-item .module-description p {
+        font-family: "Montserrat Light", sans-serif;
+        margin-bottom: 0 !important; }
+
+.familiar-photo {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center; }
+  .familiar-photo img {
+    filter: saturate(0.3);
+    object-fit: cover;
+    max-height: 300px; }
 
 .social-media-photos img {
   opacity: 0;
@@ -1299,10 +1329,13 @@ body {
     display: flex;
     display: -webkit-flex;
     flex-flow: wrap column; }
-    .module div .module-description {
-      max-width: 300px; }
-    .module div:nth-child(even) {
-      justify-content: flex-end; } }
+    .module .module-item .number {
+      justify-content: flex-end; }
+
+  .familiar-photo {
+    margin: 5% 0; }
+    .familiar-photo img {
+      max-height: 550px; } }
 @media only screen and (min-width: 1200px) {
   .welcome-left {
     width: 40%;
@@ -1337,6 +1370,21 @@ body {
 
   footer {
     padding: 1vh 0; }
+
+  #aleia-bio-sales-pages {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center; }
+    #aleia-bio-sales-pages .familiar-photo {
+      width: 35%;
+      max-height: 100%;
+      margin: 0; }
+      #aleia-bio-sales-pages .familiar-photo img {
+        max-height: 525px; }
+    #aleia-bio-sales-pages .familiar {
+      width: 60%; }
 
   .not-found-main {
     padding: 2vh 8vh; } }
