--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -247,6 +247,10 @@ a{
     text-decoration: none;
     @include font-link;
 }
+
+img{
+  width: 100%;
+}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -1209,12 +1213,15 @@ footer i:hover{
         }
       }
       .convertkit{
-        background-color: red;
         width: 100%;
         display: flex;
           display: -webkit-flex;
           justify-content: center;
           align-items: flex-end;
+          flex-flow: wrap row;
+          div{
+            width:100%;
+          }
         .ck_form_container.ck_inline{
           width: 100%;
           padding: 5% 0;
@@ -1227,6 +1234,19 @@ footer i:hover{
         .ck_form.ck_minimal{
           width: 80%;
         }
+        }
+        aside{
+          padding: 2.5% 0;
+          font-size: 1.25rem;
+          i, a{
+            text-transform: uppercase;
+          }
+          i{
+            color: $secondary-color;
+          }
+          a:hover{
+            color: $button-color;
+          }
         }
       }
     }
@@ -1305,53 +1325,64 @@ footer i:hover{
 
 .module{
     margin: 2.5% 0;
-  div{
+  .module-item{
     display: flex;
     display: -webkit-flex;
-    justify-content: flex-start;
-    align-items: center;
     flex-flow: wrap row;
+    justify-content: flex-start;
     text-align: left;
-    margin: 1.25%  0;
-    text-transform: uppercase;
+    // padding: 5% 0;
+    margin: 5% 0;
     background-color: $accent-grey;
     .number{
         color: $secondary-color;
         font-weight: 700;
         font-size: 3rem;
-        height: 5rem;
-        width: 5rem;
+        height: 80px;
+        width: 80px;
         display: flex;
         display: -webkit-flex;
         justify-content: center;
         align-items: center;
         background-color: $main-color;
-        border-radius: 100%;
-        margin: .5rem 0;
+        border-radius: 50%;
+        margin: 5% 0 0 5%;
       }
       .module-description{
-        height: 100%;
-        max-width: 175px;
         font-size: 1.5rem;
-        line-height: 1.3;
-        margin-left: 1.5rem;
+        width: 90%;
         font-family: $font-regular;
         font-weight: 700;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-flow: wrap row;;
+        margin: 5% 0 5% 5%;
+        h3{
+          // background-color: violet;
+          text-transform: uppercase;
+          margin-bottom: 2.5%;
+        }
+        p{
+          font-family: $font-body;
+          margin-bottom: 0 !important;
+        }
       }
     }
   }
-// .familar-left{
-//   width: 70%;
-// }
 
-// .familiar-photo{
-//   width: 10rem;
-//   height: 10rem;
-//   img{
-//     width: 100%;
-//   border-radius: 100%;
-//   }
-// }
+
+.familiar-photo{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  img{
+  filter: saturate(0.3);
+  object-fit: cover;
+  max-height: 300px;
+  }
+}
 
 // Pinterest images hide
 
@@ -1644,13 +1675,18 @@ footer{
     display: flex;
     display: -webkit-flex;
     flex-flow: wrap column;
-  div{
-    .module-description{
-        max-width: 300px;
-      }
+    .module-item{
+    .number{
+      justify-content: flex-end;
+    }
   }
-  div:nth-child(even){
-    justify-content: flex-end;
+}
+
+
+.familiar-photo{
+  margin: 5% 0;
+  img{
+  max-height: 550px;
   }
 }
 
@@ -1716,6 +1752,25 @@ footer{
 
 footer{
     padding: 1vh 0;
+}
+
+#aleia-bio-sales-pages{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+  .familiar-photo{
+    width: 35%;
+    max-height: 100%;
+    margin: 0;
+    img{
+      max-height: 525px;
+    }
+  }
+  .familiar{
+    width: 60%;
+  }
 }
 
 //404
